# UCL-Biosciences-ML

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
code-along/: 02_data_explore.ipynb  03_supervised_ml.ipynb  1_data_explore.ipynb  2_supervised_ml.ipynb
completed-notebooks/: 03_ml_state_space.ipynb  1_data_explore.ipynb  2_supervised_ml.ipynb
data/: README.md  heart_attack.csv  live_augmented.csv  liver_augmented.csv
notebooks/: 01_ml_state_space.ipynb  02_data_explore.ipynb  03_supervised_ml.ipynb
